--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@
 /data/dev/v1/equipements.json
 /data/dev/v1/mapping.json
 /data/dev/modeDev
+/data/json/equipements.json
+/data/json/mapping.json
+/data/json/commentMac.json
